--- a/src/styles/semantic.css
+++ b/src/styles/semantic.css
@@ -56,6 +56,7 @@
   --color-text-on-inverse-accent: var(--bg-surface-primary);
   --color-border-subtle: var(--color-purple-500);
   --color-border-extra-subtle: var(--color-purple-700);
+  --color-border-on-elevated: var(--color-purple-600);
   --color-border-default: var(--color-purple-400);
   --color-border-accent: var(--color-brand-500);
   --color-border-muted-accent: var(--color-brand-700-25);
